--- a/y9u1.md
+++ b/y9u1.md
@@ -185,13 +185,13 @@ Students created their Tinkercad account using their school Microsoft account, n
 </p>
 
 Find and use the Circuits button to start creating Arduino projects using the following tutorials: 
-
-- Ohm’s Law (https://www.tinkercad.com/learn/overview/OOUF6LFL20FZS45?type=circuits)  
-- Blink a LED with Digital Output (https://www.tinkercad.com/learn/overview/OMX1W9AL26F9EMF?type=circuits) 
-- Fading LED with Analog Output (https://www.tinkercad.com/learn/overview/ORHT6NFL26F9GSW?type=circuits) 
-- RGB LED Colour Mixing (https://www.tinkercad.com/learn/overview/ORLI9ZOL26F9GWK?type=circuits) 
-- Multiple LEDs & Breadboards (https://www.tinkercad.com/learn/overview/O94BCSIL26F9EV3?type=circuits)
-- Pushbutton (Digital Input) (https://www.tinkercad.com/learn/overview/OT6OSJQL26F9GYT?type=circuits)
+<a href="https://draw.io">draw.io</a>
+- <a href="https://www.tinkercad.com/learn/overview/OOUF6LFL20FZS45?type=circuits">Ohm’s Law</a>   
+- <a href="https://www.tinkercad.com/learn/overview/OMX1W9AL26F9EMF?type=circuits">Blink a LED with Digital Output</a>
+- <a href="https://www.tinkercad.com/learn/overview/ORHT6NFL26F9GSW?type=circuits">Fading LED with Analog Output</a> 
+- <a href="https://www.tinkercad.com/learn/overview/ORLI9ZOL26F9GWK?type=circuits">RGB LED Colour Mixing</a>
+- <a href="https://www.tinkercad.com/learn/overview/O94BCSIL26F9EV3?type=circuits">Multiple LEDs & Breadboards</a>
+- <a href="https://www.tinkercad.com/learn/overview/OT6OSJQL26F9GYT?type=circuits">Pushbutton (Digital Input) </a>
 
 ## Acivity 3: Switching between the Block-based, Text-based, and Block+Text-based interfaces 
 
@@ -204,4 +204,4 @@ Students use the “Code” button to switch between the Block-based, Text-based
 Students are invited to compare the code between the various project created and start making notes/connections between the blocks and the C++ code 
 
 ## Extension: 
-The Potentiometer (Analog Input) - https://www.tinkercad.com/learn/overview/OG8Z4G7L26F9GZ6?type=circuits 
+<a href="https://www.tinkercad.com/learn/overview/OG8Z4G7L26F9GZ6?type=circuits">The Potentiometer (Analog Input)</a>
