--- a/y8u1.md
+++ b/y8u1.md
@@ -201,4 +201,9 @@ if choice=="addition":
 - Apart from int() you can also use float() for numbers with decimal point try changing your code from int to float. 
 - Python has other data types apart from integer int() and float() decimal numbers. Research what they are and give examples. 
 
+## Lesson 5: Microbit
+A micro:bit is a small, programmable computer designed to teach coding and electronics to beginners. It features an LED display, buttons, and various sensors (like an accelerometer, compass, and light sensor) for detecting motion, light, and more. Users program it using an online editor, coded with block-based or text base code, and can use its features for a wide range of projects, from creating games to collecting data.  
 
+<p align="center">
+<iframe src="/Files/Y8/microbitinto.pdf" width="100%" height="600px" style="border: none;"></iframe>
+</p>
