--- a/y8u1.md
+++ b/y8u1.md
@@ -207,3 +207,14 @@ A micro:bit is a small, programmable computer designed to teach coding and elect
 <p align="center">
 <iframe src="/Files/Y8/microbitinto.pdf" width="100%" height="600px" style="border: none;"></iframe>
 </p>
+
+### Extension
+
+Create a simple reaction game using your micro:bit. The micro:bit will show a countdown, display a signal, and then measure how quickly you press Button A. 
+Game instructions:
+- The micro:bit will show a countdown: 3, 2, 1.
+- A heart or smiley face will appear — this is your signal!
+- You must press Button A as quickly as possible.
+- The micro:bit will tell you if you were fast enough or too slow.
+
+#### Hint: You must use function and selection (if/else)
