--- a/y8u1.md
+++ b/y8u1.md
@@ -217,4 +217,4 @@ Game instructions:
 - You must press Button A as quickly as possible.
 - The micro:bit will tell you if you were fast enough or too slow.
 
-#### Hint: You must use function and selection (if/else)
+# Hint: You must use function and selection (if/else)
