--- a/y8.md
+++ b/y8.md
@@ -12,7 +12,7 @@ Click on each module to dive into the projects and see what you'll be creating.
 
 # Modules:
 - [Computer Programming Introduction In Scratch & Python](\y8u1)
-- Fabrication
-- Robotics
+- Robotics - Bulding Robot Animals!
+- Fabrication - Making Ink Stamps!
 
 For questions about Year 8 Technology, contact Mr. Rees either via teams or at elliott.rees@nais.hk
