--- a/y8.md
+++ b/y8.md
@@ -11,8 +11,9 @@ This year, you’ll dive into the exciting world of technology and creativity. Y
 Click on each module to dive into the projects and see what you'll be creating.
 
 # Modules:
-- [Computer Programming Introduction In Scratch & Python](\y8u1)
+- [Computer Programming - Coding Principles In Scratch & Python](\y8u1)
 - Robotics - Bulding Robot Animals!
 - Fabrication - Making Ink Stamps!
+- Website Development - Building using HTML and CSS
 
 For questions about Year 8 Technology, contact Mr. Rees either via teams or at elliott.rees@nais.hk
