--- a/y9u2.md
+++ b/y9u2.md
@@ -15,5 +15,33 @@ bodyClass: page-about
 
 
 <p align="center">
-<img src="/images/illustrations/Circuit.png" width="30%" height="auto">
+<img src="/images/illustrations/Arduino1.png" width="30%" height="auto">
 </p>
+
+
+<p align="center">
+<img src="/images/illustrations/Arduino2.png" width="30%" height="auto">
+</p>
+
+
+<p align="center">
+<img src="/images/illustrations/Arduino3.png" width="30%" height="auto">
+</p>
+
+
+<p align="center">
+<img src="/images/illustrations/Arduino4.png" width="30%" height="auto">
+</p>
+
+
+
+<p align="center">
+<img src="/images/illustrations/Arduino5.png" width="30%" height="auto">
+</p>
+
+
+
+<p align="center">
+<img src="/images/illustrations/Arduino6.png" width="30%" height="auto">
+</p>
+
