--- a/y9u2.md
+++ b/y9u2.md
@@ -15,33 +15,35 @@ bodyClass: page-about
 
 
 <p align="center">
-<img src="/images/illustrations/Arduino1.png" width="30%" height="auto">
+<img src="/images/illustrations/Arduino1.png" width="50%" height="auto">
 </p>
 
-
+## Lesson 1: Introduction to Flow Charts
 <p align="center">
-<img src="/images/illustrations/Arduino2.png" width="30%" height="auto">
+<img src="/images/illustrations/Arduino2.png" width="50%" height="auto">
 </p>
 
+## Lesson 1: Introduction to Flow Charts
 
 <p align="center">
-<img src="/images/illustrations/Arduino3.png" width="30%" height="auto">
+<img src="/images/illustrations/Arduino3.png" width="50%" height="auto">
 </p>
 
+## Lesson 1: Introduction to Flow Charts
 
 <p align="center">
-<img src="/images/illustrations/Arduino4.png" width="30%" height="auto">
+<img src="/images/illustrations/Arduino4.png" width="50%" height="auto">
 </p>
 
-
+## Lesson 1: Introduction to Flow Charts
 
 <p align="center">
-<img src="/images/illustrations/Arduino5.png" width="30%" height="auto">
+<img src="/images/illustrations/Arduino5.png" width="50%" height="auto">
 </p>
 
-
+## Lesson 1: Introduction to Flow Charts
 
 <p align="center">
-<img src="/images/illustrations/Arduino6.png" width="30%" height="auto">
+<img src="/images/illustrations/Arduino6.png" width="50%" height="auto">
 </p>
 
