--- a/y9u2.md
+++ b/y9u2.md
@@ -47,3 +47,10 @@ bodyClass: page-about
 <img src="/images/illustrations/Arduino6.png" width="50%" height="auto">
 </p>
 
+
+## Lesson 1: Introduction to Flow Charts
+
+<p align="center">
+<img src="/images/illustrations/Arduino7.png" width="50%" height="auto">
+</p>
+
