--- a/y9u2.md
+++ b/y9u2.md
@@ -12,18 +12,32 @@ bodyClass: page-about
 
 ## Lesson 1: Introduction to Flow Charts
 
-
+#### Lesson objectives
+- To know what a flowchart is and its purpose.
+- To understand the meaning behind the different shapes of a flow chart.
+- To be able to create flowcharts which represent logic I am comfortable with.
 
 <p align="center">
 <img src="/images/illustrations/Arduino1.png" width="75%" height="auto">
 </p>
 
 ## Lesson 1: Introduction to Flow Charts
+
+#### Lesson objectives
+- To know what a flowchart is and its purpose.
+- To understand the meaning behind the different shapes of a flow chart.
+- To be able to create flowcharts which represent logic I am comfortable with.
+
 <p align="center">
 <img src="/images/illustrations/Arduino2.png" width="75%" height="auto">
 </p>
 
 ## Lesson 1: Introduction to Flow Charts
+
+#### Lesson objectives
+- To know what a flowchart is and its purpose.
+- To understand the meaning behind the different shapes of a flow chart.
+- To be able to create flowcharts which represent logic I am comfortable with.
 
 <p align="center">
 <img src="/images/illustrations/Arduino3.png" width="75%" height="auto">
@@ -31,11 +45,22 @@ bodyClass: page-about
 
 ## Lesson 1: Introduction to Flow Charts
 
+#### Lesson objectives
+- To know what a flowchart is and its purpose.
+- To understand the meaning behind the different shapes of a flow chart.
+- To be able to create flowcharts which represent logic I am comfortable with.
+
 <p align="center">
 <img src="/images/illustrations/Arduino4.png" width="75%" height="auto">
 </p>
 
 ## Lesson 1: Introduction to Flow Charts
+
+#### Lesson objectives
+- To know what a flowchart is and its purpose.
+- To understand the meaning behind the different shapes of a flow chart.
+- To be able to create flowcharts which represent logic I am comfortable with.
+
 
 <p align="center">
 <img src="/images/illustrations/Arduino5.png" width="75%" height="auto">
@@ -43,12 +68,25 @@ bodyClass: page-about
 
 ## Lesson 1: Introduction to Flow Charts
 
+#### Lesson objectives
+- To know what a flowchart is and its purpose.
+- To understand the meaning behind the different shapes of a flow chart.
+- To be able to create flowcharts which represent logic I am comfortable with.
+
+
 <p align="center">
 <img src="/images/illustrations/Arduino6.png" width="75%" height="auto">
 </p>
 
 
 ## Lesson 1: Introduction to Flow Charts
+
+#### Lesson objectives
+- To know what a flowchart is and its purpose.
+- To understand the meaning behind the different shapes of a flow chart.
+- To be able to create flowcharts which represent logic I am comfortable with.
+
+
 
 <p align="center">
 <img src="/images/illustrations/Arduino7.png" width="75%" height="auto">
