--- a/y9u2.md
+++ b/y9u2.md
@@ -10,7 +10,7 @@ bodyClass: page-about
  In this unit, we’ll explore how computers make decisions by breaking down problems into clear, logical steps using flowcharts. You’ll also revisit key programming techniques in Scratch, sharpening your skills in sequencing, loops, and conditionals. This foundation will prepare you to transition confidently into Python, where you’ll start writing real code and building programs from scratch (pun intended).
 
 
-## Lesson 1: Introduction to Flow Charts
+## Lesson 1: Intro to Arduino, breadboards, and LED control
 
 #### Lesson objectives
 - To know what a flowchart is and its purpose.
