--- a/y9u2.md
+++ b/y9u2.md
@@ -21,7 +21,10 @@ bodyClass: page-about
 <img src="/images/illustrations/Arduino1.png" width="75%" height="auto">
 </p>
 
-## Lesson 2: Introduction to Flow Charts
+Task 2:
+Can you get 3 LED's flashing one after the other:
+
+## Lesson 2: Push Buttons and LED continued
 
 #### Lesson objectives
 - To know what a flowchart is and its purpose.
@@ -34,7 +37,10 @@ bodyClass: page-about
 
 <hr>
 
-## Lesson 3: Introduction to Flow Charts
+Task 2:
+Can you use a button to trigger a 3 LED's turn turn on, one after the other?
+
+## Lesson 3: Sensing Temperature
 
 #### Lesson objectives
 - To know what a flowchart is and its purpose.
@@ -47,7 +53,14 @@ bodyClass: page-about
 
 <hr>
 
-## Lesson 4: Introduction to Flow Charts
+Task 2:
+Can you edit your design to have three LED's. Your code should have the following rules:
+- LED 1 turns on if the temperature is over 30 degrees.
+- LED 2 turns on if the temperature is between 20 and 30 degrees.
+- LED 3 turns on if the temperature is below 20 degreees.
+- Only 1 LED should be on at a time.
+
+## Lesson 4: Sensing Light
 
 #### Lesson objectives
 - To know what a flowchart is and its purpose.
@@ -60,21 +73,15 @@ bodyClass: page-about
 
 <hr>
 
-## Lesson 5: Introduction to Flow Charts
+Task 2:
+Change the volume of the buzzer to follow these rules: 
+- Be silent if there is high light levels.
+- emit low levels of sound if there is medium-high light levels.
+- emit medium levels of sound if there is medium-high light levels.
+- Be loud if there is no light detected.
 
-#### Lesson objectives
-- To know what a flowchart is and its purpose.
-- To understand the meaning behind the different shapes of a flow chart.
-- To be able to create flowcharts which represent logic I am comfortable with.
 
-
-<p align="center">
-<img src="/images/illustrations/Arduino5.png" width="75%" height="auto">
-</p>
-
-<hr>
-
-## Lesson 6: Introduction to Flow Charts
+## Lesson 5: Sensing Distance
 
 #### Lesson objectives
 - To know what a flowchart is and its purpose.
@@ -89,7 +96,7 @@ bodyClass: page-about
 <hr>
 
 
-## Lesson 7: Introduction to Flow Charts
+## Project: 
 
 #### Lesson objectives
 - To know what a flowchart is and its purpose.
