--- a/y9u2.md
+++ b/y9u2.md
@@ -1,5 +1,5 @@
 ---
-title: Year 9 - Flowcharts and Y8 Programming Recap
+title: Year 9 - Digital Electronics with Arduino
 layout: page
 description: About
 bodyClass: page-about
@@ -7,15 +7,15 @@ bodyClass: page-about
 
 # The Project
 
- In this unit, we’ll explore how computers make decisions by breaking down problems into clear, logical steps using flowcharts. You’ll also revisit key programming techniques in Scratch, sharpening your skills in sequencing, loops, and conditionals. This foundation will prepare you to transition confidently into Python, where you’ll start writing real code and building programs from scratch (pun intended).
+This scheme of work introduces students to the exciting world of physical computing through hands-on Arduino projects. Over the course of several lessons, learners will explore how software and hardware interact to create real-world solutions. Starting with simple circuits such as LEDs and buttons, students will progress to more complex systems involving sensors, buzzers, transistors, and servo motors. Each project combines practical electronics with coding challenges, helping students develop problem-solving skills, logical thinking, and creativity. By the end of the unit, students will not only understand the fundamentals of microcontroller programming and circuit design but will also apply these skills to design and build their own interactive technology project.
 
 
 ## Lesson 1: Intro to Arduino, breadboards, and LED control
 
 #### Lesson objectives
-- To know what a flowchart is and its purpose.
-- To understand the meaning behind the different shapes of a flow chart.
-- To be able to create flowcharts which represent logic I am comfortable with.
+- Understand the role of resistors and LEDs in a circuit.
+- Learn how to configure Arduino pins for output using pinMode().
+- Write a simple program to turn an LED on and off.
 
 <p align="center">
 <img src="/images/illustrations/Arduino1.png" width="75%" height="auto">
@@ -27,9 +27,9 @@ Can you get 3 LED's flashing one after the other:
 ## Lesson 2: Push Buttons and LED continued
 
 #### Lesson objectives
-- To know what a flowchart is and its purpose.
-- To understand the meaning behind the different shapes of a flow chart.
-- To be able to create flowcharts which represent logic I am comfortable with.
+- Explain how push buttons work as input devices.
+- Use digitalRead() to detect button presses.
+- Control a buzzer based on user input through conditional statements.
 
 <p align="center">
 <img src="/images/illustrations/Arduino2.png" width="75%" height="auto">
@@ -43,9 +43,9 @@ Can you use a button to trigger a 3 LED's turn turn on, one after the other?
 ## Lesson 3: Sensing Temperature
 
 #### Lesson objectives
-- To know what a flowchart is and its purpose.
-- To understand the meaning behind the different shapes of a flow chart.
-- To be able to create flowcharts which represent logic I am comfortable with.
+- Understand how temperature sensors (e.g., TMP36 or similar) provide analog data.
+- Use analogRead() to capture sensor values and convert them into temperature readings.
+- To be able to use if statements to change the output based on the temperature.
 
 <p align="center">
 <img src="/images/illustrations/Arduino3.png" width="75%" height="auto">
@@ -63,9 +63,9 @@ Can you edit your design to have three LED's. Your code should have the followin
 ## Lesson 4: Sensing Light
 
 #### Lesson objectives
-- To know what a flowchart is and its purpose.
-- To understand the meaning behind the different shapes of a flow chart.
-- To be able to create flowcharts which represent logic I am comfortable with.
+- Explain how a photoresistor (LDR) works and its role in detecting light levels.
+- Use analogRead() to measure light intensity and interpret the values.
+- Write a program that responds to light changes (e.g., turning on an LED when it’s dark).
 
 <p align="center">
 <img src="/images/illustrations/Arduino4.png" width="75%" height="auto">
@@ -84,9 +84,9 @@ Change the volume of the buzzer to follow these rules:
 ## Lesson 5: Sensing Distance
 
 #### Lesson objectives
-- To know what a flowchart is and its purpose.
-- To understand the meaning behind the different shapes of a flow chart.
-- To be able to create flowcharts which represent logic I am comfortable with.
+- Understand how ultrasonic sensors measure distance using sound waves.
+- Use Arduino functions to read distance data from a sonar sensor.
+- Implement a program that reacts to distance changes (e.g., activating an LED or buzzer when an object is too close).
 
 
 <p align="center">
