--- a/y9u2.md
+++ b/y9u2.md
@@ -9,6 +9,11 @@ bodyClass: page-about
 
 This scheme of work introduces students to the exciting world of physical computing through hands-on Arduino projects. Over the course of several lessons, learners will explore how software and hardware interact to create real-world solutions. Starting with simple circuits such as LEDs and buttons, students will progress to more complex systems involving sensors, buzzers, transistors, and servo motors. Each project combines practical electronics with coding challenges, helping students develop problem-solving skills, logical thinking, and creativity. By the end of the unit, students will not only understand the fundamentals of microcontroller programming and circuit design but will also apply these skills to design and build their own interactive technology project.
 
+#### What is an Arduino?
+An Arduino is a small computer you can hold in your hand. It doesn’t have a screen or keyboard, but you can tell it what to do by writing simple code on your computer and sending it to the board. Unlike your laptop which is designed to save and run many computer programs, an arduino is designed to run one program only.
+
+With Arduino, you can control real things using electronics — like making a robot arm wave hello, building a motion-sensing alarm that buzzes when someone walks by, creating a light show that reacts to music, or even designing a mini weather station that tells you the temperature and humidity. It's like turning your ideas into real gadgets with just a few wires and lines of code.
+
 
 ## Lesson 1: Intro to Arduino, breadboards, and LED control
 
@@ -17,11 +22,50 @@ This scheme of work introduces students to the exciting world of physical comput
 - Learn how to configure Arduino pins for output using pinMode().
 - Write a simple program to turn an LED on and off.
 
+In this activity, you will make an LED blink using an Arduino. This simple project shows how code can control hardware. You’ll connect an LED to your Arduino, write a short program, and upload it to see the LED turn on and off at regular intervals. This is your first step in learning how electronics and programming work together.
+
+#### Task 1 - Flashing an LED.
+
+##### The Hardware
+
+In this activity, you will build a simple circuit that makes an LED flash using an Arduino. An LED (Light Emitting Diode) is a small light that only works when electricity flows in the correct direction. This means LEDs have polarity: the longer leg is the positive side (called the anode), and the shorter leg is the negative side (called the cathode). To protect the LED from too much current, we use a resistor, which limits the flow of electricity.
+
+Every circuit needs a complete path for electricity to flow: from the Arduino’s power pin, through the LED and resistor, and back to GND (ground) on the Arduino. If the circuit is not connected to ground, it will not work. Once the LED is wired correctly, you will upload a program to make it turn on and off repeatedly, creating a blinking effect.
+
+Create the circuit in the image below.
+
 <p align="center">
 <img src="/images/illustrations/Arduino1.png" width="75%" height="auto">
 </p>
 
-Task 2:
+
+##### The Software
+
+This program below tells the Arduino to make the LED blink. First, we create a variable ledPin to store the pin number where the LED is connected (pin 13). In the setup() function, we set this pin as an output, so the Arduino can send power to the LED. 
+
+The loop() function runs over and over: it turns the LED ON with digitalWrite(ledPin, HIGH), waits for one second using delay(1000), then turns the LED OFF with digitalWrite(ledPin, LOW) and waits another second. This cycle repeats forever, making the LED flash on and off.
+
+```cpp
+
+int ledPin = 13; // Pin where the LED is connected
+
+void setup() { // This function runs one at the start of the program.
+  pinMode(ledPin, OUTPUT); // Set the LED pin as an output
+}
+
+void loop() { // This function runs after setup and repeats forever.
+  digitalWrite(ledPin, HIGH); // Turn the LED ON
+  delay(1000);                // Wait for 1 second (1000 milliseconds)
+  
+  digitalWrite(ledPin, LOW);  // Turn the LED OFF
+  delay(1000);                // Wait for 1 second
+}
+
+
+```
+
+
+#### Task 2:
 Can you get 3 LED's flashing one after the other:
 
 ## Lesson 2: Push Buttons and LED continued
