--- a/y9u2.md
+++ b/y9u2.md
@@ -39,7 +39,7 @@ Create the circuit in the image below.
 </p>
 
 
-##### The Software
+##### The Software - Variables, delays and outputs 
 
 This program below tells the Arduino to make the LED blink. First, we create a variable ledPin to store the pin number where the LED is connected (pin 13). In the setup() function, we set this pin as an output, so the Arduino can send power to the LED. 
 
@@ -64,9 +64,11 @@ void loop() { // This function runs after setup and repeats forever.
 
 ```
 
-
 #### Task 2:
-Can you get 3 LED's flashing one after the other:
+We could make our program more interesting by adding more LED's. Improve your circuit by making three LED's turn on one by one, before turning off one by one.
+
+
+<hr>
 
 ## Lesson 2: Push Buttons and LED continued
 
@@ -75,14 +77,58 @@ Can you get 3 LED's flashing one after the other:
 - Use digitalRead() to detect button presses.
 - Control a buzzer based on user input through conditional statements.
 
+In this activity, you will add a push button to your Arduino circuit. A button is an input device that allows you to control what happens in your program by pressing it. When the button is pressed, it completes the circuit and sends a signal to the Arduino. You will learn how to wire the button correctly, why it needs a resistor, and how to write code that responds to button presses by turning an LED on or off.
+
+
+#### Task 1 – Adding a Push Button
+The Hardware
+A push button works by connecting two sides of the circuit when pressed. In this circuit:
+
+One side of the button connects to power (5V).
+The other side connects to an Arduino digital input pin.
+A resistor is used as a pull-down resistor to ensure the pin reads LOW when the button is not pressed.
+The LED remains connected as before, but now it will only turn on when the button is pressed.
+
+Every circuit still needs a complete path: from power → through the button → to the Arduino pin → and back to GND.
+Create the circuit shown in the image below:
+
+
 <p align="center">
 <img src="/images/illustrations/Arduino2.png" width="75%" height="auto">
 </p>
 
+#### The Software - Using decisions and taking inputs
+This program reads the button state and turns the LED on when the button is pressed:
+
+```cpp
+int ledPin = 13;       // LED connected to pin 13
+int buttonPin = 2;     // Button connected to pin 2
+
+void setup() {
+  pinMode(ledPin, OUTPUT);      // LED is an output
+  pinMode(buttonPin, INPUT);    // Button is an input
+}
+
+void loop() {
+  int buttonState = digitalRead(buttonPin); // Read button state
+
+  if (buttonState == HIGH) {    // If button is pressed
+    digitalWrite(ledPin, HIGH); // Turn LED ON
+  } else {
+    digitalWrite(ledPin, LOW);  // Turn LED OFF
+  }
+}
+```
+
+#### Task 2 – Make It More Interesting
+Modify your program so that:
+
+The LED toggles on and off each time you press the button (instead of only staying on while pressed).
+Hint: You will need a variable to remember the LED state and use an if statement to change it.
+
 <hr>
 
-Task 2:
-Can you use a button to trigger a 3 LED's turn turn on, one after the other?
+
 
 ## Lesson 3: Sensing Temperature
 
