--- a/y9u2.md
+++ b/y9u2.md
@@ -75,12 +75,12 @@ We could make our program more interesting by adding more LED's. Improve your ci
 #### Lesson objectives
 - Explain how push buttons work as input devices.
 - Use digitalRead() to detect button presses.
-- Control a buzzer based on user input through conditional statements.
+- To be able to create a platform which reacts to button presses.
 
 In this activity, you will add a push button to your Arduino circuit. A button is an input device that allows you to control what happens in your program by pressing it. When the button is pressed, it completes the circuit and sends a signal to the Arduino. You will learn how to wire the button correctly, why it needs a resistor, and how to write code that responds to button presses by turning an LED on or off.
 
 
-#### Task 1 – Adding a Push Button
+#### Task 1 – Using a Push Button
 The Hardware
 A push button works by connecting two sides of the circuit when pressed. In this circuit:
 
@@ -137,13 +137,52 @@ Hint: You will need a variable to remember the LED state and use an if statement
 - Use analogRead() to capture sensor values and convert them into temperature readings.
 - To be able to use if statements to change the output based on the temperature.
 
+In this activity, you will use a temperature sensor to measure the surrounding temperature and display the result using your Arduino. A temperature sensor converts heat into an electrical signal that the Arduino can read. Unlike buttons or LEDs, which use digital signals (ON or OFF), temperature sensors provide analog values that vary depending on the temperature. You will learn how to connect the sensor correctly, why it needs three connections (power, ground, and signal), and how to write code that converts the sensor’s output into a readable temperature.
+
+#### Task 1 – Reading the temperature
+
+Here’s what happens in this circuit:
+
+- The sensor has three pins:
+
+  - VCC (power) connects to 5V on the Arduino.
+  - GND connects to ground.
+  - Signal connects to an analog input pin (e.g., A0).
+
+- The Arduino reads the voltage from the signal pin and converts it into a temperature value.
+
+Create the circuit shown in the image below:
+
 <p align="center">
 <img src="/images/illustrations/Arduino3.png" width="75%" height="auto">
 </p>
 
-<hr>
+The Software
+This program reads the sensor value and converts it into Celsius:
 
-Task 2:
+```cpp
+int sensorPin = A0; // Sensor connected to analog pin A0
+
+void setup() {
+  Serial.begin(9600); // Start Serial Monitor
+}
+
+void loop() {
+  int sensorValue = analogRead(sensorPin); // Read analog value
+  float voltage = sensorValue * (5.0 / 1023.0); // Convert to voltage
+  float temperatureC = (voltage - 0.5) * 100;   // Convert to Celsius (TMP36 formula)
+
+  Serial.print("Temperature: ");
+  Serial.print(temperatureC);
+  Serial.println(" °C");
+
+  delay(1000); // Wait 1 second before next reading
+}
+```
+
+
+#### Task 2 - Making it more interesting.
+
 Can you edit your design to have three LED's. Your code should have the following rules:
 - LED 1 turns on if the temperature is over 30 degrees.
 - LED 2 turns on if the temperature is between 20 and 30 degrees.
