--- a/y9u2.md
+++ b/y9u2.md
@@ -22,6 +22,8 @@ With Arduino, you can control real things using electronics — like making a ro
 - Learn how to configure Arduino pins for output using pinMode().
 - Write a simple program to turn an LED on and off.
 
+#### Introduction
+
 In this activity, you will make an LED blink using an Arduino. This simple project shows how code can control hardware. You’ll connect an LED to your Arduino, write a short program, and upload it to see the LED turn on and off at regular intervals. This is your first step in learning how electronics and programming work together.
 
 #### Task 1 - Flashing an LED.
@@ -60,8 +62,6 @@ void loop() { // This function runs after setup and repeats forever.
   digitalWrite(ledPin, LOW);  // Turn the LED OFF
   delay(1000);                // Wait for 1 second
 }
-
-
 ```
 
 #### Task 2:
@@ -76,6 +76,8 @@ We could make our program more interesting by adding more LED's. Improve your ci
 - Explain how push buttons work as input devices.
 - Use digitalRead() to detect button presses.
 - To be able to create a platform which reacts to button presses.
+
+#### Introduction
 
 In this activity, you will add a push button to your Arduino circuit. A button is an input device that allows you to control what happens in your program by pressing it. When the button is pressed, it completes the circuit and sends a signal to the Arduino. You will learn how to wire the button correctly, why it needs a resistor, and how to write code that responds to button presses by turning an LED on or off.
 
@@ -137,6 +139,8 @@ Hint: You will need a variable to remember the LED state and use an if statement
 - Use analogRead() to capture sensor values and convert them into temperature readings.
 - To be able to use if statements to change the output based on the temperature.
 
+#### Introduction
+
 In this activity, you will use a temperature sensor to measure the surrounding temperature and display the result using your Arduino. A temperature sensor converts heat into an electrical signal that the Arduino can read. Unlike buttons or LEDs, which use digital signals (ON or OFF), temperature sensors provide analog values that vary depending on the temperature. You will learn how to connect the sensor correctly, why it needs three connections (power, ground, and signal), and how to write code that converts the sensor’s output into a readable temperature.
 
 #### Task 1 – Reading the temperature
@@ -161,23 +165,34 @@ The Software
 This program reads the sensor value and converts it into Celsius:
 
 ```cpp
-int sensorPin = A0; // Sensor connected to analog pin A0
+
+int sensorPin = A0;    // Temperature sensor connected to analog pin A0
+int ledPin = 4;        // LED connected to digital pin 4
 
 void setup() {
-  Serial.begin(9600); // Start Serial Monitor
+  Serial.begin(9600);          // Start Serial Monitor
+  pinMode(ledPin, OUTPUT);     // Set LED pin as output
 }
 
 void loop() {
-  int sensorValue = analogRead(sensorPin); // Read analog value
-  float voltage = sensorValue * (5.0 / 1023.0); // Convert to voltage
-  float temperatureC = (voltage - 0.5) * 100;   // Convert to Celsius (TMP36 formula)
+  int sensorValue = analogRead(sensorPin);           // Read analog value
+  float voltage = sensorValue * (5.0 / 1023.0);      // Convert to voltage
+  float temperatureC = (voltage - 0.5) * 100;        // Convert to Celsius (TMP36 formula)
 
   Serial.print("Temperature: ");
   Serial.print(temperatureC);
   Serial.println(" °C");
 
+  // Turn LED ON if temperature is above 20°C
+  if (temperatureC > 20) {
+    digitalWrite(ledPin, HIGH);
+  } else {
+    digitalWrite(ledPin, LOW);
+  }
+
   delay(1000); // Wait 1 second before next reading
 }
+
 ```
 
 
@@ -189,12 +204,28 @@ Can you edit your design to have three LED's. Your code should have the followin
 - LED 3 turns on if the temperature is below 20 degreees.
 - Only 1 LED should be on at a time.
 
+<hr> 
+
 ## Lesson 4: Sensing Light
 
 #### Lesson objectives
 - Explain how a photoresistor (LDR) works and its role in detecting light levels.
 - Use analogRead() to measure light intensity and interpret the values.
 - Write a program that responds to light changes (e.g., turning on an LED when it’s dark).
+
+#### Introduction
+
+In this activity, you will build a Light Alarm using an Arduino, a photoresistor (LDR), an LED, and a buzzer. The photoresistor changes its resistance based on light intensity, which the Arduino reads as an analog value. You will write code that reacts to different light levels by turning on an LED and sounding a buzzer. This project introduces multiple outputs and structured decision-making using if / else if / else.
+
+#### Task 1 – Measuring light
+
+Create a circuit which monitors the light levels and turns a light on when its dark!
+
+Circuit overview:
+
+
+Create the circuit shown in the image below:
+
 
 <p align="center">
 <img src="/images/illustrations/Arduino4.png" width="75%" height="auto">
