--- a/y9u2.md
+++ b/y9u2.md
@@ -37,7 +37,7 @@ Every circuit needs a complete path for electricity to flow: from the Arduino’
 Create the circuit in the image below.
 
 <p align="center">
-<img src="/images/illustrations/Arduino1.png" width="75%" height="auto">
+<iframe src="https://nordanglia-my.sharepoint.com/:b:/g/personal/elliott_rees_nais_hk/IQDqzkJMUzMERJN8RhLpTtYzAeQUoOJTGteIM2SkwHhzpVk?e=EYa6py" width="100%" height="600px" style="border: none;"></iframe>
 </p>
 
 
