--- a/y9u2.md
+++ b/y9u2.md
@@ -26,46 +26,13 @@ With Arduino, you can control real things using electronics — like making a ro
 
 In this activity, you will make an LED blink using an Arduino. This simple project shows how code can control hardware. You’ll connect an LED to your Arduino, write a short program, and upload it to see the LED turn on and off at regular intervals. This is your first step in learning how electronics and programming work together.
 
-#### Task 1 - Flashing an LED.
-
-##### The Hardware
-
 In this activity, you will build a simple circuit that makes an LED flash using an Arduino. An LED (Light Emitting Diode) is a small light that only works when electricity flows in the correct direction. This means LEDs have polarity: the longer leg is the positive side (called the anode), and the shorter leg is the negative side (called the cathode). To protect the LED from too much current, we use a resistor, which limits the flow of electricity.
 
 Every circuit needs a complete path for electricity to flow: from the Arduino’s power pin, through the LED and resistor, and back to GND (ground) on the Arduino. If the circuit is not connected to ground, it will not work. Once the LED is wired correctly, you will upload a program to make it turn on and off repeatedly, creating a blinking effect.
 
-Create the circuit in the image below.
-
 <p align="center">
 <iframe src="/Files/Y9/Arduino/Lesson 1.pdf" width="100%" height="600px" style="border: none;"></iframe>
 </p>
-
-
-##### The Software - Variables, delays and outputs 
-
-This program below tells the Arduino to make the LED blink. First, we create a variable ledPin to store the pin number where the LED is connected (pin 13). In the setup() function, we set this pin as an output, so the Arduino can send power to the LED. 
-
-The loop() function runs over and over: it turns the LED ON with digitalWrite(ledPin, HIGH), waits for one second using delay(1000), then turns the LED OFF with digitalWrite(ledPin, LOW) and waits another second. This cycle repeats forever, making the LED flash on and off.
-
-```cpp
-
-int ledPin = 13; // Pin where the LED is connected
-
-void setup() { // This function runs one at the start of the program.
-  pinMode(ledPin, OUTPUT); // Set the LED pin as an output
-}
-
-void loop() { // This function runs after setup and repeats forever.
-  digitalWrite(ledPin, HIGH); // Turn the LED ON
-  delay(1000);                // Wait for 1 second (1000 milliseconds)
-  
-  digitalWrite(ledPin, LOW);  // Turn the LED OFF
-  delay(1000);                // Wait for 1 second
-}
-```
-
-#### Task 2:
-We could make our program more interesting by adding more LED's. Improve your circuit by making three LED's turn on one by one, before turning off one by one.
 
 
 <hr>
@@ -81,56 +48,11 @@ We could make our program more interesting by adding more LED's. Improve your ci
 
 In this activity, you will add a push button to your Arduino circuit. A button is an input device that allows you to control what happens in your program by pressing it. When the button is pressed, it completes the circuit and sends a signal to the Arduino. You will learn how to wire the button correctly, why it needs a resistor, and how to write code that responds to button presses by turning an LED on or off.
 
-
-#### Task 1 – Using a Push Button
-The Hardware
-A push button works by connecting two sides of the circuit when pressed. In this circuit:
-
-One side of the button connects to power (5V).
-The other side connects to an Arduino digital input pin.
-A resistor is used as a pull-down resistor to ensure the pin reads LOW when the button is not pressed.
-The LED remains connected as before, but now it will only turn on when the button is pressed.
-
-Every circuit still needs a complete path: from power → through the button → to the Arduino pin → and back to GND.
-Create the circuit shown in the image below:
-
-
 <p align="center">
-<img src="/images/illustrations/Arduino2.png" width="75%" height="auto">
+<iframe src="/Files/Y9/Arduino/Lesson 2.pdf" width="100%" height="600px" style="border: none;"></iframe>
 </p>
 
-#### The Software - Using decisions and taking inputs
-This program reads the button state and turns the LED on when the button is pressed:
-
-```cpp
-int ledPin = 13;       // LED connected to pin 13
-int buttonPin = 2;     // Button connected to pin 2
-
-void setup() {
-  pinMode(ledPin, OUTPUT);      // LED is an output
-  pinMode(buttonPin, INPUT);    // Button is an input
-}
-
-void loop() {
-  int buttonState = digitalRead(buttonPin); // Read button state
-
-  if (buttonState == HIGH) {    // If button is pressed
-    digitalWrite(ledPin, HIGH); // Turn LED ON
-  } else {
-    digitalWrite(ledPin, LOW);  // Turn LED OFF
-  }
-}
-```
-
-#### Task 2 – Make It More Interesting
-Modify your program so that:
-
-The LED toggles on and off each time you press the button (instead of only staying on while pressed).
-Hint: You will need a variable to remember the LED state and use an if statement to change it.
-
 <hr>
-
-
 
 ## Lesson 3: Sensing Temperature
 
@@ -143,66 +65,10 @@ Hint: You will need a variable to remember the LED state and use an if statement
 
 In this activity, you will use a temperature sensor to measure the surrounding temperature and display the result using your Arduino. A temperature sensor converts heat into an electrical signal that the Arduino can read. Unlike buttons or LEDs, which use digital signals (ON or OFF), temperature sensors provide analog values that vary depending on the temperature. You will learn how to connect the sensor correctly, why it needs three connections (power, ground, and signal), and how to write code that converts the sensor’s output into a readable temperature.
 
-#### Task 1 – Reading the temperature
-
-Here’s what happens in this circuit:
-
-- The sensor has three pins:
-
-  - VCC (power) connects to 5V on the Arduino.
-  - GND connects to ground.
-  - Signal connects to an analog input pin (e.g., A0).
-
-- The Arduino reads the voltage from the signal pin and converts it into a temperature value.
-
-Create the circuit shown in the image below:
-
 <p align="center">
-<img src="/images/illustrations/Arduino3.png" width="75%" height="auto">
+<iframe src="/Files/Y9/Arduino/Lesson 3.pdf" width="100%" height="600px" style="border: none;"></iframe>
 </p>
 
-The Software
-This program reads the sensor value and converts it into Celsius:
-
-```cpp
-
-int sensorPin = A0;    // Temperature sensor connected to analog pin A0
-int ledPin = 4;        // LED connected to digital pin 4
-
-void setup() {
-  Serial.begin(9600);          // Start Serial Monitor
-  pinMode(ledPin, OUTPUT);     // Set LED pin as output
-}
-
-void loop() {
-  int sensorValue = analogRead(sensorPin);           // Read analog value
-  float voltage = sensorValue * (5.0 / 1023.0);      // Convert to voltage
-  float temperatureC = (voltage - 0.5) * 100;        // Convert to Celsius (TMP36 formula)
-
-  Serial.print("Temperature: ");
-  Serial.print(temperatureC);
-  Serial.println(" °C");
-
-  // Turn LED ON if temperature is above 20°C
-  if (temperatureC > 20) {
-    digitalWrite(ledPin, HIGH);
-  } else {
-    digitalWrite(ledPin, LOW);
-  }
-
-  delay(1000); // Wait 1 second before next reading
-}
-
-```
-
-
-#### Task 2 - Making it more interesting.
-
-Can you edit your design to have three LED's. Your code should have the following rules:
-- LED 1 turns on if the temperature is over 30 degrees.
-- LED 2 turns on if the temperature is between 20 and 30 degrees.
-- LED 3 turns on if the temperature is below 20 degreees.
-- Only 1 LED should be on at a time.
 
 <hr> 
 
@@ -217,55 +83,27 @@ Can you edit your design to have three LED's. Your code should have the followin
 
 In this activity, you will build a Light Alarm using an Arduino, a photoresistor (LDR), an LED, and a buzzer. The photoresistor changes its resistance based on light intensity, which the Arduino reads as an analog value. You will write code that reacts to different light levels by turning on an LED and sounding a buzzer. This project introduces multiple outputs and structured decision-making using if / else if / else.
 
-#### Task 1 – Measuring light
-
-Create a circuit which monitors the light levels and turns a light on when its dark!
-
-Circuit overview:
-
-
-Create the circuit shown in the image below:
-
 
 <p align="center">
-<img src="/images/illustrations/Arduino4.png" width="75%" height="auto">
+<iframe src="/Files/Y9/Arduino/Lesson 4.pdf" width="100%" height="600px" style="border: none;"></iframe>
 </p>
 
-<hr>
 
-Task 2:
-Change the volume of the buzzer to follow these rules: 
-- Be silent if there is high light levels.
-- emit low levels of sound if there is medium-high light levels.
-- emit medium levels of sound if there is medium-high light levels.
-- Be loud if there is no light detected.
-
-
-## Lesson 5: Sensing Distance
+## Lesson 5: Moving Servos
 
 #### Lesson objectives
-- Understand how ultrasonic sensors measure distance using sound waves.
-- Use Arduino functions to read distance data from a sonar sensor.
-- Implement a program that reacts to distance changes (e.g., activating an LED or buzzer when an object is too close).
+- Explain how a servo motor works and how it differs from other actuators.
+- Connect a servo motor and a push button to an Arduino correctly.
+- Write and modify code to control a servo motor using a button press.
 
+#### Introduction
 
-<p align="center">
-<img src="/images/illustrations/Arduino6.png" width="75%" height="auto">
-</p>
-
-<hr>
-
-
-## Project: 
-
-#### Lesson objectives
-- To know what a flowchart is and its purpose.
-- To understand the meaning behind the different shapes of a flow chart.
-- To be able to create flowcharts which represent logic I am comfortable with.
-
+In this activity, you will learn how to control movement using a servo motor and a push button. Servos are widely used in robotics and automation because they allow precise control of position. By pressing a button, the servo will rotate to a set angle, wait for a short time, and then return to its original position. This activity builds on previous lessons about digital inputs and outputs, combining them to create a simple interactive mechanism—similar to how gates, locks, and robotic arms operate in real-world systems.
 
 <p align="center">
-<img src="/images/illustrations/Arduino7.png" width="75%" height="auto">
+<iframe src="/Files/Y9/Arduino/Lesson 5.pdf" width="100%" height="600px" style="border: none;"></iframe>
 </p>
+
+
 
 <hr>
