--- a/y9.md
+++ b/y9.md
@@ -13,7 +13,7 @@ Click on each module to dive into the projects and see what you'll be creating.
 
 # Modules:
 - [Reading and creating flow charts](\y9u1)
-- Computer Programming
+- [Digital Electronics & Robotics With Arduino](\y9u2)
 - Arduino
 - Fabrication
 - Architecture
