--- a/y9u2.md
+++ b/y9u2.md
@@ -30,14 +30,7 @@ In this activity, you will build a simple circuit that makes an LED flash using 
 
 Every circuit needs a complete path for electricity to flow: from the Arduino’s power pin, through the LED and resistor, and back to GND (ground) on the Arduino. If the circuit is not connected to ground, it will not work. Once the LED is wired correctly, you will upload a program to make it turn on and off repeatedly, creating a blinking effect.
 
-<p align="center">
-<iframe src="/Files/Y9/Arduino/Lesson 1.pdf"></iframe>
-</p>
-
-
-
-
-<iframe src="https://nordanglia-my.sharepoint.com/personal/elliott_rees_nais_hk/_layouts/15/Doc.aspx?sourcedoc={31b1ab68-52e4-42bc-b807-c3f22a7fb68d}&amp;action=embedview&amp;wdAr=1.7777777777777777" width="476px" height="288px" frameborder="0">This is an embedded <a target="_blank" href="https://office.com">Microsoft Office</a> presentation, powered by <a target="_blank" href="https://office.com/webapps">Office</a>.</iframe>
+<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vTxNEZTcNgwN0jJQ9_l8_usBkhZayPeI5uSHybyDkKOJoNFimSmF5lmyzT7ztdYibdjnF-gxjOK5smd/pubembed?start=false&loop=false&delayms=3000" frameborder="0" width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 <hr>
 
